kustomize/argocd/resource.ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argocd.riweston.io`)
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.riweston.io`) && Headers(`Content-Type`, `application/grpc`)
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
